package com.digitalpathology.digi_report.common;

import android.content.Context;
class ValidationChecker {

    Context context;

    public ValidationChecker(Context context) {
        this.context = context;
    }
}
